index. html branch-label-box

--- a/index.html
+++ b/index.html
@@ -138,31 +138,46 @@
           <h2 class="branch-title">Czym się zajmujemy</h2>
           <ul class="branch-pictures">
             <li>
-              <img
-                class="image-no-gap"
-                src="images/work1.jpg"
-                alt="Osoba pracuje w biurze, pisze kod na komputerze. Obok na biurku leży kartka z algorytmem."
-                width="370"
-                height="294"
-              />
+              <div class="branch-thumb">
+                <img
+                  class="image-no-gap"
+                  src="images/work1.jpg"
+                  alt="Osoba pracuje w biurze, pisze kod na komputerze. Obok na biurku leży kartka z algorytmem."
+                  width="370"
+                  height="294"
+                />
+                <div class="branch-label-box">
+                  <p class="branch-label">Aplikacje komputerowe</p>
+                </div>
+              </div>
             </li>
             <li>
-              <img
-                class="image-no-gap"
-                src="images/work2.jpg"
-                alt="Osoba pracuje przed laptopem, trzyma w ręku telefon komórkowy. Na ekranie komputera znajdują się grafiki smartfonów."
-                width="370"
-                height="294"
-              />
+              <div class="branch-thumb">
+                <img
+                  class="image-no-gap"
+                  src="images/work2.jpg"
+                  alt="Osoba pracuje przed laptopem, trzyma w ręku telefon komórkowy. Na ekranie komputera znajdują się grafiki smartfonów."
+                  width="370"
+                  height="294"
+                />
+                <div class="branch-label-box">
+                  <p class="branch-label">Aplikacje mobilne</p>
+                </div>
+              </div>
             </li>
             <li>
-              <img
-                class="image-no-gap"
-                src="images/work3.jpg"
-                alt="Osoba pracuje na tablecie, w ręku trzyma rysik. Na ekranie znajduje się poleta kolorów."
-                width="370"
-                height="294"
-              />
+              <div class="branch-thumb">
+                <img
+                  class="image-no-gap"
+                  src="images/work3.jpg"
+                  alt="Osoba pracuje na tablecie, w ręku trzyma rysik. Na ekranie znajduje się poleta kolorów."
+                  width="370"
+                  height="294"
+                />
+                <div class="branch-label-box">
+                  <p class="branch-label">Rozwiązania graficzne</p>
+                </div>
+              </div>
             </li>
           </ul>
         </div>
