--- a/index.html
+++ b/index.html
@@ -74,7 +74,11 @@
           <h1 class="slogan-text order-box-text">
             Efektywne rozwiązania dla waszego biznesu
           </h1>
-          <button class="slogan-button order-box-button" type="button">
+          <button
+            data-modal-open
+            class="slogan-button order-box-button"
+            type="button"
+          >
             Zamów usługę
           </button>
         </div>
@@ -476,5 +480,38 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-close" data-modal-close>
+          <svg width="30" height="30">
+            <circle
+              r="15"
+              cx="15"
+              cy="15"
+              fill="#fff"
+              stroke="rgba(0, 0, 0, 0.1)"
+              stroke-width="1"
+            ></circle>
+            <line
+              x1="9.5"
+              y1="9.5"
+              x2="20.5"
+              y2="20.5"
+              stroke="#2a2a2a"
+              stroke-width="2"
+            ></line>
+            <line
+              x1="9.5"
+              y1="20.5"
+              x2="20.5"
+              y2="9.5"
+              stroke="#2a2a2a"
+              stroke-width="2"
+            ></line>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
