portfolio images overlay and styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -87,13 +87,23 @@
           <ul class="portfolio-list portfolio-box">
             <li>
               <a class="link" href>
-                <img
-                  class="image-no-gap"
-                  src="images/technocrack.jpg"
-                  alt="Strona internetowa firmy otwarta na laptopie. Przedstawione sylwetki osób."
-                  width="370"
-                  height="294"
-                />
+                <figure>
+                  <img
+                    class="image-no-gap"
+                    src="images/technocrack.jpg"
+                    alt="Strona internetowa firmy otwarta na laptopie. Przedstawione sylwetki osób."
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="portfolio-image-overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </figcaption>
+                </figure>
                 <div class="portfolio-box-text">
                   <h2 class="portfolio-title">Technocrack</h2>
                   <p class="portfolio-type">Strona internetowa</p>
@@ -102,13 +112,23 @@
             </li>
             <li>
               <a class="link" href>
-                <img
-                  class="image-no-gap"
-                  src="images/new-orlean-golden-star.jpg"
-                  alt="Dwóch mężczyzn gra w koszykówkę. Za nimi jest abstrakcyjne, niebieskie tło."
-                  width="370"
-                  height="294"
-                />
+                <figure>
+                  <img
+                    class="image-no-gap"
+                    src="images/new-orlean-golden-star.jpg"
+                    alt="Dwóch mężczyzn gra w koszykówkę. Za nimi jest abstrakcyjne, niebieskie tło."
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="portfolio-image-overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </figcaption>
+                </figure>
                 <div class="portfolio-box-text">
                   <h2 class="portfolio-title">
                     Grafika New Orlean vs Golden Star
@@ -119,13 +139,23 @@
             </li>
             <li>
               <a class="link" href>
-                <img
-                  class="image-no-gap"
-                  src="images/seafood.jpg"
-                  alt="Logo z rybą w tle i nazwą The Seafood Restaurant na froncie."
-                  width="370"
-                  height="294"
-                />
+                <figure>
+                  <img
+                    class="image-no-gap"
+                    src="images/seafood.jpg"
+                    alt="Logo z rybą w tle i nazwą The Seafood Restaurant na froncie."
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="portfolio-image-overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </figcaption>
+                </figure>
                 <div class="portfolio-box-text">
                   <h2 class="portfolio-title">Restauracja Seafood</h2>
                   <p class="portfolio-type">Aplikacja</p>
@@ -134,13 +164,23 @@
             </li>
             <li>
               <a class="link" href>
-                <img
-                  class="image-no-gap"
-                  src="images/prime.jpg"
-                  alt="Czarne słuchawki, stojące pionowo na płaskiej powierzchni."
-                  width="370"
-                  height="294"
-                />
+                <figure>
+                  <img
+                    class="image-no-gap"
+                    src="images/prime.jpg"
+                    alt="Czarne słuchawki, stojące pionowo na płaskiej powierzchni."
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="portfolio-image-overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </figcaption>
+                </figure>
                 <div class="portfolio-box-text">
                   <h2 class="portfolio-title">Projekt Prime</h2>
                   <p class="portfolio-type">Marketing</p>
@@ -149,13 +189,23 @@
             </li>
             <li>
               <a class="link" href>
-                <img
-                  class="image-no-gap"
-                  src="images/boxes.jpg"
-                  alt="Dwa pudełka leżące na płaskiej powierzchni. Jedno większe białe, drugie mniejsze brązowe."
-                  width="370"
-                  height="294"
-                />
+                <figure>
+                  <img
+                    class="image-no-gap"
+                    src="images/boxes.jpg"
+                    alt="Dwa pudełka leżące na płaskiej powierzchni. Jedno większe białe, drugie mniejsze brązowe."
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="portfolio-image-overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </figcaption>
+                </figure>
                 <div class="portfolio-box-text">
                   <h2 class="portfolio-title">Projekt Boxes</h2>
                   <p class="portfolio-type">Aplikacja</p>
@@ -164,13 +214,23 @@
             </li>
             <li>
               <a class="link" href>
-                <img
-                  class="image-no-gap"
-                  src="images/inspiration-has-no-borders.jpg"
-                  alt="Monitor z wyświetlonymi białymi napisami i mapą świata."
-                  width="370"
-                  height="294"
-                />
+                <figure>
+                  <img
+                    class="image-no-gap"
+                    src="images/inspiration-has-no-borders.jpg"
+                    alt="Monitor z wyświetlonymi białymi napisami i mapą świata."
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="portfolio-image-overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </figcaption>
+                </figure>
                 <div class="portfolio-box-text">
                   <h2 class="portfolio-title">Inspiration has no Borders</h2>
                   <p class="portfolio-type">Strona internetowa</p>
@@ -179,13 +239,23 @@
             </li>
             <li>
               <a class="link" href>
-                <img
-                  class="image-no-gap"
-                  src="images/limited-edition.jpg"
-                  alt="Otwarte czasopismo. Na lewej stronie kobieta suszy włosy, na prawej stronie osoby spoglądają w niebo."
-                  width="370"
-                  height="294"
-                />
+                <figure>
+                  <img
+                    class="image-no-gap"
+                    src="images/limited-edition.jpg"
+                    alt="Otwarte czasopismo. Na lewej stronie kobieta suszy włosy, na prawej stronie osoby spoglądają w niebo."
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="portfolio-image-overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </figcaption>
+                </figure>
                 <div class="portfolio-box-text">
                   <h2 class="portfolio-title">Magazyn Limited Edition</h2>
                   <p class="portfolio-type">Dizajn</p>
@@ -194,13 +264,23 @@
             </li>
             <li>
               <a class="link" href>
-                <img
-                  class="image-no-gap"
-                  src="images/lab.jpg"
-                  alt="Biała etykieta ze sznureczkiem. Napis na etykiecie: Label tag PSD Mockup."
-                  width="370"
-                  height="294"
-                />
+                <figure>
+                  <img
+                    class="image-no-gap"
+                    src="images/lab.jpg"
+                    alt="Biała etykieta ze sznureczkiem. Napis na etykiecie: Label tag PSD Mockup."
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="portfolio-image-overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </figcaption>
+                </figure>
                 <div class="portfolio-box-text">
                   <h2 class="portfolio-title">Projekt LAB</h2>
                   <p class="portfolio-type">Marketing</p>
@@ -209,13 +289,23 @@
             </li>
             <li>
               <a class="link" href>
-                <img
-                  class="image-no-gap"
-                  src="images/growing-business.jpg"
-                  alt="Laptop z garfiką na ekranie, na której napis: growing business oraz fragment sylwetki osoby z tabletem."
-                  width="370"
-                  height="294"
-                />
+                <figure>
+                  <img
+                    class="image-no-gap"
+                    src="images/growing-business.jpg"
+                    alt="Laptop z garfiką na ekranie, na której napis: growing business oraz fragment sylwetki osoby z tabletem."
+                    width="370"
+                    height="294"
+                  />
+                  <figcaption class="portfolio-image-overlay">
+                    <p>
+                      Technocrack jest popularną platformą wykorzystywaną do
+                      rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                      platformę do celów szpiegowskich i ataków na
+                      niezabezpieczone serwery konkurencji
+                    </p>
+                  </figcaption>
+                </figure>
                 <div class="portfolio-box-text">
                   <h2 class="portfolio-title">Growing Business</h2>
                   <p class="portfolio-type">Aplikacja</p>
