--- a/index.html
+++ b/index.html
@@ -483,32 +483,11 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-close" data-modal-close>
-          <svg width="30" height="30">
-            <circle
-              r="15"
-              cx="15"
-              cy="15"
-              fill="#fff"
-              stroke="rgba(0, 0, 0, 0.1)"
-              stroke-width="1"
-            ></circle>
-            <line
-              x1="9.5"
-              y1="9.5"
-              x2="20.5"
-              y2="20.5"
-              stroke="#2a2a2a"
-              stroke-width="2"
-            ></line>
-            <line
-              x1="9.5"
-              y1="20.5"
-              x2="20.5"
-              y2="9.5"
-              stroke="#2a2a2a"
-              stroke-width="2"
-            ></line>
-          </svg>
+          <div class="close-icon-box" href>
+            <svg class="close-icon-content" width="18" height="18">
+              <use href="./images/close-icon.svg#icon-close-black-18dp"></use>
+            </svg>
+          </div>
         </button>
       </div>
     </div>
